Mogenius Properties fix 2.0

--- a/src/main/resources/application-mogenius.properties
+++ b/src/main/resources/application-mogenius.properties
@@ -18,4 +18,4 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-admin.mail=ed44ac3bda4a06+@smtp.mailtrap.io
+admin.mail=tomek.kowalski.89@gmail.com
