--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ trello.app.username=tomekkowalski89
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 # EMAIL CONFIGURATION
-spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
