--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'junit:junit:4.13.1'
 	implementation 'junit:junit:4.13.1'
 	implementation 'junit:junit:4.13.1'
+	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
