--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,11 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ADMINISTRATION
+admin.name=TOMEK
 admin.mail=tomek.kowalski.89@gmail.com
+company.email=test@test.pl
 
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
@@ -38,3 +42,4 @@ info.company.name=TaskCrudAppCreator
 info.company.goal=Our goal is to make the world a better place to live!
 info.company.email=tasks@crud.com
 info.company.phone=744489230
+
